--- a/app/src/main/res/navigation/nav_graph_starting.xml
+++ b/app/src/main/res/navigation/nav_graph_starting.xml
@@ -35,15 +35,15 @@
             app:enterAnim="@anim/left"
             app:exitAnim="@anim/left2" />
         <action
-            app:enterAnim="@anim/left"
-            app:exitAnim="@anim/left2"
             android:id="@+id/action_fragmentOtp_to_forgetPassword2"
-            app:destination="@id/forgetPassword2" />
-        <action
+            app:destination="@id/forgetPassword2"
             app:enterAnim="@anim/left"
-            app:exitAnim="@anim/left2"
+            app:exitAnim="@anim/left2" />
+        <action
             android:id="@+id/action_fragmentOtp_to_bio"
-            app:destination="@id/bio" />
+            app:destination="@id/bio"
+            app:enterAnim="@anim/left"
+            app:exitAnim="@anim/left2" />
     </fragment>
     <fragment
         android:id="@+id/login"
@@ -58,34 +58,55 @@
             app:enterAnim="@anim/left"
             app:exitAnim="@anim/left2" />
         <action
-            app:enterAnim="@anim/left"
-            app:exitAnim="@anim/left2"
             android:id="@+id/action_login_to_numberVerify"
-            app:destination="@id/numberVerify" />
-        <action
+            app:destination="@id/numberVerify"
             app:enterAnim="@anim/left"
-            app:exitAnim="@anim/left2"
+            app:exitAnim="@anim/left2" />
+        <action
+            android:id="@+id/action_login_to_password_Email"
+            app:destination="@id/password_Email"
+            app:enterAnim="@anim/left"
+            app:exitAnim="@anim/left2"/>
+        <action
             android:id="@+id/action_login_to_fragmentOtp"
-            app:destination="@id/fragmentOtp" />
+            app:destination="@id/fragmentOtp"
+            app:enterAnim="@anim/left"
+            app:exitAnim="@anim/left2"/>
     </fragment>
     <fragment
         android:id="@+id/bio"
         android:name="com.inksy.UI.Fragments.Bio"
         android:label="Bio"
         tools:layout="@layout/fragment_bio">
-        <action
-            android:id="@+id/action_bio_to_login"
-            app:destination="@id/login" />
+
     </fragment>
     <fragment
-        tools:layout="@layout/fragment_forget_password"
         android:id="@+id/forgetPassword2"
         android:name="com.inksy.UI.Fragments.ForgetPassword"
-        android:label="ForgetPassword" >
+        android:label="ForgetPassword"
+        tools:layout="@layout/fragment_forget_password">
         <action
-            android:id="@+id/action_forgetPassword2_to_login"
-            app:destination="@id/login"
+            android:id="@+id/action_forgetPassword2_to_numberVerify"
+            app:destination="@id/numberVerify"
+            app:enterAnim="@anim/left"
+            app:exitAnim="@anim/left2"
+            />
+    </fragment>
+    <fragment
+        android:id="@+id/password_Email"
+        android:name="com.inksy.UI.Fragments.Password_Email"
+        android:label="Password_Email"
+        tools:layout="@layout/fragment_password__email">
+        <action
+            android:id="@+id/action_password_Email_to_fragmentOtp"
+            app:destination="@id/fragmentOtp"
+            app:enterAnim="@anim/left"
+            app:exitAnim="@anim/left2" />
+        <action
+            android:id="@+id/action_password_Email_to_numberVerify"
+            app:destination="@id/numberVerify"
             app:enterAnim="@anim/right2"
-            app:exitAnim="@anim/right"/>
+            app:exitAnim="@anim/right"
+            />
     </fragment>
 </navigation>
