--- a/app/src/main/res/layout/dialoge_report_event.xml
+++ b/app/src/main/res/layout/dialoge_report_event.xml
@@ -21,7 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="18dp"
-                android:text="Report Event"
+                android:text="Report Journal"
                 android:textColor="#000080"
                 android:textSize="22sp"
                 android:textStyle="bold"
