--- a/app/src/main/res/layout/fragment_dashboard__approved.xml
+++ b/app/src/main/res/layout/fragment_dashboard__approved.xml
@@ -10,26 +10,11 @@
         tools:context=".UI.Fragments.DashboardApproved">
 
 
-        <com.github.ybq.android.spinkit.SpinKitView
-            android:id="@+id/spinkit"
-            style="@style/SpinKitView.Large.Circle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center"
-            app:SpinKit_Color="@color/appBlue"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-
-
         <RelativeLayout
-            android:visibility="visible"
             android:id="@+id/layoutemptydoodle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/emptydoodle"
@@ -53,11 +38,11 @@
         </RelativeLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:visibility="gone"
             android:id="@+id/rv_dashboard_approved"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:visibility="gone"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
