--- a/app/src/main/res/layout/fragment_more_info.xml
+++ b/app/src/main/res/layout/fragment_more_info.xml
@@ -11,7 +11,25 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".UI.Fragments.MoreInfo">
+
+
+            <com.github.ybq.android.spinkit.SpinKitView
+                android:id="@+id/spin_kit"
+                style="@style/SpinKitView.Large.Circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                app:SpinKit_Color="@color/appBlue"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
             <TextView
+
                 android:id="@+id/textView16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -27,12 +45,12 @@
             <!--        Doodle Store-->
 
             <ImageView
-                android:onClick="OpenDoodle"
                 android:id="@+id/image_dooble"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_16sdp"
                 android:layout_marginTop="@dimen/_16sdp"
+                android:onClick="OpenDoodle"
                 android:src="@drawable/doodle_store"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView16" />
@@ -390,10 +408,10 @@
 
             <TextView
                 android:id="@+id/supportNumbe"
-                android:layout_marginBottom="@dimen/_35sdp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginBottom="@dimen/_35sdp"
                 android:fontFamily="@font/sfmedium"
                 android:text="+1 (917)725-4095"
                 android:textColor="@color/appBlue"
