--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -23,8 +23,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/avatar_placeholder" />
+            android:src="@drawable/ic_empty_user" />
 
     </androidx.cardview.widget.CardView>
 
