--- a/app/src/main/res/layout/item_people.xml
+++ b/app/src/main/res/layout/item_people.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/avatar_placeholder" />
+            android:src="@drawable/ic_empty_user" />
 
     </androidx.cardview.widget.CardView>
 
